# Synthetic-Pair-Deviation-Engine

./: CMakeLists.txt  CMakePresets.json  Documentation  README.md  executed_trades.csv
src/: main.cpp
src/arbitrage/: ArbitrageLegOptimizer.hpp  ArbitrageOpportunity.hpp  LiquidityAnalyzer.cpp  LiquidityAnalyzer.hpp  MarketImpactEstimator.hpp  RiskManager.cpp  RiskManager.hpp  StatisticalArbitrageEngine.cpp  StatisticalArbitrageEngine.hpp  SyntheticInstrumentCalculator.cpp  SyntheticInstrumentCalculator.hpp  TradeExecutor.cpp  TradeExecutor.hpp  VolatilityArbitrage.cpp  VolatilityArbitrage.hpp
src/arbitrage/Risk/: CorrelationAnalyzer.hpp  PositionManager.hpp
src/arbitrage/options/: OptionPricer.cpp  OptionPricer.hpp  VolatilityArbitrageDetector.hpp
src/exchange/: BinanceClient.cpp  BinanceClient.hpp  BinancePerpClient.cpp  BinancePerpClient.hpp  BybitClient.cpp  BybitClient.hpp  ExchangeClient.hpp  MarketDataAggregator.cpp  MarketDataAggregator.hpp  MarketDataStore.cpp  MarketDataStore.hpp  MarketDataTypes.hpp  OKXClient.cpp  OKXClient.hpp
src/monitoring/: PerformanceMonitor.cpp  PerformanceMonitor.hpp  RiskDashboard.cpp  RiskDashboard.hpp  StressSimulator.hpp  StressTester.cpp  StressTester.hpp  VaREstimator.cpp  VaREstimator.hpp
